--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "path-parser": "^2.0.2",
+    "react-toolbox": "^2.0.0-beta.12",
+    "react-toolbox-themr": "^1.0.2",
     "sendgrid": "^5.2.3",
     "stripe": "^5.1.1"
   }
