added main layout and navigation

--- a/client/package.json
+++ b/client/package.json
@@ -33,8 +33,34 @@
   },
   "reactToolbox": {
     "include": [
+      "APP_BAR",
+      "AUTOCOMPLETE",
+      "AVATAR",
       "BUTTON",
-      "DATE_PICKER"
+      "CARD",
+      "CHIP",
+      "CHECKBOX",
+      "DATE_PICKER",
+      "DIALOG",
+      "DRAWER",
+      "DROPDOWN",
+      "INPUT",
+      "LAYOUT",
+      "LINK",
+      "LIST",
+      "MENU",
+      "NAVIGATION",
+      "OVERLAY",
+      "PROGRESS_BAR",
+      "RADIO",
+      "RIPPLE",
+      "SLIDER",
+      "SNACKBAR",
+      "SWITCH",
+      "TABLE",
+      "TABS",
+      "TOOLTIP",
+      "TIME_PICKER"
     ],
     "customProperties": {
       "animation-duration": "0.3s",
